--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
     <meta name="msapplication-TileColor" content="#30bced">
     <meta name="msapplication-config" content="./icons/browserconfig.xml">
     <link rel="stylesheet" href='stylesheet.css'> 
+
+    <!-- Stripe Integration -->
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
