update since last time hre

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,16 @@
 
     <!-- Stripe Integration -->
     <script src="https://js.stripe.com/v3/"></script>
+
+    <!-- Google Adwords Integration -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-191440003-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-191440003-1');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
